fixed when hovering over text, the image unblurred

--- a/src/images.css
+++ b/src/images.css
@@ -41,6 +41,11 @@
   filter: blur(2px);
 }
 
+.image-container:hover .image {
+  filter: blur(2px);
+
+}
+
 .image-container .image-hover-text {
   position: absolute;
   top: 50%;
@@ -48,6 +53,8 @@
   transform: translate(-50%, 50%);
   background-color: transparent;
   color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
   opacity: 0;
   transition: transform 1s ease, opacity 1s ease;
   font-size: 50px;
